reformat and rename buttons

--- a/src/main/resources/templates/entries/allEntries.html
+++ b/src/main/resources/templates/entries/allEntries.html
@@ -35,9 +35,9 @@
             </table>
         </div>
         <div class="col-md-6">
-            <a class="btn btn-success" href="#" th:href="@{/create}"> Add Books </a>
+            <a class="btn btn-success" href="#" th:href="@{/create}"> Add Entries </a>
             <a class="btn btn-primary" href="#" th:href="@{/edit}"
-               th:classappend="${entries.empty} ? 'disabled' : ''"> Edit Books </a>
+               th:classappend="${entries.empty} ? 'disabled' : ''"> Edit Entries </a>
             <a class="btn btn-warning" href="#" th:href="@{/clear}"> Clear All </a>
         </div>
     </div>
