--- a/src/main/resources/templates/entries/edit.html
+++ b/src/main/resources/templates/entries/edit.html
@@ -12,17 +12,17 @@
     </div>
     <div class="row">
         <div class="col-md-6">
-            <a class="btn btn-info" href="#" th:href="@{/all}"> Back to All Books </a>
+
             <form action="#" class="form-horizontal"
                   th:action="@{/replace}"
                   th:object="${wrapper}"
                   method="post">
                 <fieldset>
-					<span class="pull-right">
-						    <input type="submit" id="submitButton" class="btn btn-success" th:value="Save">
-						    <input type="reset" id="resetButton" class="btn btn-danger" th:value="Reset"/>
+					<span>
+						    <input type="submit" id="submitButton" class="btn btn-success" th:value="Update">
 					</span>
-                    <table class="table table-bordered table-hover table-striped">
+                    <a class="btn btn-info" href="#" th:href="@{/all}"> Back to All Books </a>
+                    <table class="table">
                         <thead>
                         <tr>
                             <th> Service Name</th>
