Fix minor bugs in displaying UI elements in edit and add views

--- a/src/main/resources/templates/entries/edit.html
+++ b/src/main/resources/templates/entries/edit.html
@@ -25,6 +25,7 @@
                     <table class="table">
                         <thead>
                         <tr>
+                            <th> isMocked</th>
                             <th> Service Name</th>
                             <th> Route</th>
                             <th> MockResponse</th>
