--- a/src/main/resources/templates/entries/add.html
+++ b/src/main/resources/templates/entries/add.html
@@ -4,6 +4,8 @@
     <title>Add Service(s)</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
 </head>
+<script type="text/javascript">
+</script>
 <body>
 <div class="container">
     <div class="row">
@@ -34,7 +36,7 @@
                         </thead>
                         <tbody>
                         <tr th:object="${form}">
-                            <td><input type="checkbox" th:field="*{mocked}" required/></td>
+                            <td><input type="checkbox" th:field="*{mocked}"/></td>
                             <td><input th:placeholder="ServiceName " th:field="*{name}" required/></td>
                             <td><input th:placeholder="RealUrl " th:field="*{realUrl}" required/></td>
                             <td><input th:placeholder="MockResponse " th:field="*{mock}" required/></td>
