--- a/src/main/resources/templates/entries/allEntries.html
+++ b/src/main/resources/templates/entries/allEntries.html
@@ -1,23 +1,48 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mocked Services</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-</head>
-<body style="background-color:#f2f2f2" >
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
+    <style>
+    </style>
+<body style="background-color:#212529">
+
+<!-- Grey with black text -->
+<nav class="navbar navbar-expand-sm bg-light navbar-light">
+    <ul class="navbar-nav">
+        <li class="nav-item active">
+            <a class="navbar-brand" href="#">Internal Proxy</a>
+        </li>
+        <span>
+        <a class="btn btn-success" href="#" th:href="@{/create}"> Add Entries </a>
+             </span>
+        <span> <a class="btn btn-primary" href="#" th:href="@{/edit}"
+                  th:classappend="${entries.empty} ? 'disabled' : ''"> Edit Entries </a> </span>
+        <span> <a class="btn btn-warning" href="#" th:href="@{/clear}"> Clear All </a> </span>
+    </ul>
+</nav>
+<div class="page-header">
+    <h1>|</h1>
+</div>
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h1> Mocked Services </h1>
+            <h1 style="color:white"> Mocked Services </h1>
         </div>
     </div>
     <div class="row">
         <div class="col-md-6">
-            <table class="table">
+            <table class="table table-dark">
                 <thead>
-                    <th> isMocked </th>
-                    <th> ServiceName</th>
-                    <th> Route</th>
-                    <th> MockResponse</th>
+
+                <th> isMocked</th>
+                <th> ServiceName</th>
+                <th> Route</th>
+                <th> MockResponse</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -26,7 +51,7 @@
                 </tr>
 
                 <tr th:each="entry : ${entries}">
-                    <td >
+                    <td>
                         <span th:if="${entries[__${entry.key}__].mocked}" style="color:green">
                             true
                         </span>
@@ -42,12 +67,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="col-md-6">
-            <a class="btn btn-success" href="#" th:href="@{/create}"> Add Entries </a>
-            <a class="btn btn-primary" href="#" th:href="@{/edit}"
-               th:classappend="${entries.empty} ? 'disabled' : ''"> Edit Entries </a>
-            <a class="btn btn-warning" href="#" th:href="@{/clear}"> Clear All </a>
-        </div>
+
     </div>
 </div>
 </body>
