--- a/src/main/resources/templates/entries/edit.html
+++ b/src/main/resources/templates/entries/edit.html
@@ -22,9 +22,6 @@
 </div>
 <div class="container">
     <div class="row">
-        <div class="col-md-12">
-            <h1 style="color:white"> Edit Entries </h1>
-        </div>
     </div>
     <div class="row">
         <div class="col-md-6">
@@ -35,7 +32,8 @@
                   method="post">
                 <fieldset>
 					<span>
-						    <input type="submit" id="submitButton" class="btn btn-success" th:value="Update">
+                         <h1 style="display: inline-block; color:white"> Edit Entries </h1>
+						    <input type="submit" id="submitButton" class="btn btn-success" th:value="Update" style="float: right;">
 					</span>
 
                     <table class="table table-dark">
