--- a/src/main/resources/templates/entries/edit.html
+++ b/src/main/resources/templates/entries/edit.html
@@ -1,4 +1,4 @@
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <title>Edit Entries</title>
     <meta charset="utf-8">
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mocked Services</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 </head>
-<body style="background-color:#212529" >
+<body style="background-color:#212529">
 <nav class="navbar navbar-expand-sm bg-light navbar-light">
     <ul class="navbar-nav">
         <li class="nav-item active">
@@ -18,7 +19,7 @@
     </ul>
 </nav>
 <div class="page-header">
-    <h1></h1>
+    <h1>|</h1>
 </div>
 <div class="container">
     <div class="row">
@@ -30,10 +31,11 @@
                   th:action="@{/replace}"
                   th:object="${wrapper}"
                   method="post">
-                <fieldset>
+                <fieldset style="display: inline-block;">
 					<span>
                          <h1 style="display: inline-block; color:white"> Edit Entries </h1>
-						    <input type="submit" id="submitButton" class="btn btn-success" th:value="Update" style="float: right;">
+						    <input type="submit" id="submitButton" class="btn btn-success" th:value="Update"
+                                   style="float: right;">
 					</span>
 
                     <table class="table table-dark">
@@ -48,10 +50,44 @@
                         <tbody>
                         <tr th:each="currentClient, stat : *{temp}">
                             <td>
-                                <input type="checkbox" th:field="*{temp[__${stat.index}__].mocked}"  />  </td>
-                            <td> <input th:field="*{temp[__${stat.index}__].name}" required/>  </td>
-                            <td>  <input th:field="*{temp[__${stat.index}__].realUrl}" required pattern="https?://.+"/>  </td>
-                            <td>  <input th:field="*{temp[__${stat.index}__].mock}" required /></td>
+                                <input type="checkbox" th:field="*{temp[__${stat.index}__].mocked}"/></td>
+                            <td><input th:field="*{temp[__${stat.index}__].name}" required/></td>
+                            <td><input th:field="*{temp[__${stat.index}__].realUrl}" required pattern="https?://.+"/>
+                            </td>
+                            <td>
+                                <button type="button" class="btn btn-primary" data-toggle="modal"
+                                        data-target="#exampleModal">View/Edit
+                                </button>
+                            </td>
+                            <div class="modal right fade" id="exampleModal" tabindex="-1" role="dialog"
+                                 aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-full-height modal-lg modal-right" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLabel">Edit Response</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <form>
+                                                <div class="form-group">
+                                                    <label for="message-text" class="col-form-label">Mock
+                                                        Response:</label>
+                                                    <textarea type="text" th:field="*{temp[__${stat.index}__].mock}"
+                                                              class="form-control" id="message-text"></textarea>
+                                                </div>
+                                            </form>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-primary" data-dismiss="modal">
+                                                Submit
+                                            </button>
+                                            <!--<button type="button" class="btn btn-primary">Save</button>-->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </tr>
                         </tbody>
                     </table>
