--- a/src/main/resources/templates/entries/add.html
+++ b/src/main/resources/templates/entries/add.html
@@ -3,24 +3,33 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <title>Add Service(s)</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-</head>
-<body style="background-color:#212529">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Bootstrap core CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Material Design Bootstrap -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.15/css/mdb.min.css" rel="stylesheet">
 
-<nav class="navbar navbar-expand-sm bg-light navbar-light">
-    <ul class="navbar-nav">
-        <li class="nav-item active">
-            <a class="navbar-brand" href="#">Internal Proxy</a>
-        </li>
-        <a class="btn btn-info" href="#" th:href="@{/all}"> Back to All Services </a>
-    </ul>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <!-- MDB core JavaScript -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.15/js/mdb.min.js"></script>
+</head>
+<style>
+
+
+</style>
+<body style="background-color:#ededed">
+
+<nav style="margin-bottom: 35px;" class="navbar navbar-expand-sm bg-light navbar-light">
+    <!--<ul class="navbar-nav nav-justified">-->
+            <!--<li class="nav-item active">-->
+            <h4 style="margin-bottom:-4px" class="navbar-brand">INTERNAL PROXY</h4>
+            <!--</li>-->
+            <a class="btn btn-info" href="#" th:href="@{/all}"> Back to All Services </a>
+    <!--</ul>-->
 </nav>
-<div class="page-header">
-    <h1>|</h1>
-</div>
 <div class="container">
     <div class="row">
 
@@ -34,14 +43,14 @@
                   method="post">
                 <fieldset style="display: inline-block;">
 					<span style="">
-                             <h1 style="display: inline-block; color:white"> Add Service </h1>
+                             <h1 style="display: inline-block;"> Add Service </h1>
 						    <input type="submit" id="submitButton" class="btn btn-success text-right" th:value="Save"
                                    style="float: right; margin:5px;">
 
 						    <input type="reset" id="resetButton" class="btn btn-danger text-right" th:value="Reset"
                                    style="float: right; margin:5px;"/>
 					</span>
-                    <table class="table table-dark">
+                    <table class="table table-striped">
                         <thead>
                         <tr>
                             <th> isMocked</th>
@@ -62,9 +71,9 @@
                                         data-target="#exampleModal">Enter Response
                                 </button>
                             </td>
-                            <div class="modal fade right" id="exampleModal" tabindex="-1" role="dialog"
+                            <div class="modal right fade" id="exampleModal" tabindex="-1" role="dialog"
                                  aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                <div class="modal-dialog modal-full-height modal-lg" role="document">
+                                <div class="modal-dialog modal-full-height modal-right" role="document">
                                     <div class="modal-content">
                                         <div class="modal-header">
                                             <h4 class="modal-title w-100" id="exampleModalLabel">New message</h4>
@@ -78,12 +87,14 @@
                                                     <label for="message-text" class="col-form-label">Mock
                                                         Response:</label>
                                                     <!--<textarea class="form-control" id="message-text"></textarea>-->
-                                                    <textarea type="text" th:field="*{mock}" class="form-control" id="message-text"></textarea>
+                                                    <textarea type="text" th:field="*{mock}" class="form-control"
+                                                              id="message-text"></textarea>
                                                 </div>
                                             </form>
                                         </div>
                                         <div class="modal-footer justify-content-center">
-                                            <button type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
+                                            <button type="button" class="btn btn-primary" data-dismiss="modal">Submit
+                                            </button>
                                             <!--<button type="button" class="btn btn-primary">Submit</button>-->
                                         </div>
                                     </div>
@@ -102,4 +113,5 @@
 
 
 </body>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.14/js/mdb.min.js"></script>
 </html>
