--- a/src/main/resources/templates/entries/allEntries.html
+++ b/src/main/resources/templates/entries/allEntries.html
@@ -4,39 +4,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mocked Services</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Bootstrap core CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Material Design Bootstrap -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.15/css/mdb.min.css" rel="stylesheet">
 
-    <style>
-    </style>
-<body style="background-color:#212529">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <!-- MDB core JavaScript -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.15/js/mdb.min.js"></script>
+<body style="background-color:#ededed">
+<style>
 
-<!-- Grey with black text -->
-<nav class="navbar navbar-expand-sm bg-light navbar-light">
-    <ul class="navbar-nav">
-        <li class="nav-item active">
-            <a class="navbar-brand" href="#">Internal Proxy</a>
-        </li>
-        <span>
-        <a class="btn btn-success" href="#" th:href="@{/create}" style="margin-right:5px;"> Add Entries </a>
-             </span>
-        <span> <a class="btn btn-primary" href="#" th:href="@{/edit}"
-                  th:classappend="${entries.empty} ? 'disabled' : ''" style="margin-right:5px;"> Edit Entries </a> </span>
-        <span> <a class="btn btn-warning" href="#" th:href="@{/clear}" style="margin-right :5px;"> Clear All </a> </span>
-    </ul>
+</style>
+<nav style="margin-bottom: 35px;" class="navbar navbar-expand-sm bg-light navbar-light">
+    <!--<ul class="navbar-nav">-->
+    <h4 style="margin-bottom:-4px" class="navbar-brand">INTERNAL PROXY</h4>
+    <a class="btn btn-success" href="#" th:href="@{/create}"> Add Entries </a>
+    <a class="btn btn-primary" href="#" th:href="@{/edit}" th:classappend="${entries.empty} ? 'disabled' : ''"> Edit
+        Entries </a>
+    <a class="btn btn-warning" href="#" th:href="@{/clear}"> Clear All </a>
+    <!--</ul>-->
 </nav>
-<div class="page-header">
-    <h1>|</h1>
-</div>
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h1 style="color:white"> Mocked Services </h1>
+            <h1> Mocked Services </h1>
         </div>
     </div>
     <div class="row">
         <div class="col-md-6">
-            <table class="table table-dark">
+            <table class="table table-striped">
                 <thead>
 
                 <th> isMocked</th>
