--- a/src/main/resources/templates/entries/edit.html
+++ b/src/main/resources/templates/entries/edit.html
@@ -5,18 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mocked Services</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Bootstrap core CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Material Design Bootstrap -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.15/css/mdb.min.css" rel="stylesheet">
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <!-- MDB core JavaScript -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.15/js/mdb.min.js"></script>
 </head>
-<body style="background-color:#212529">
-<nav class="navbar navbar-expand-sm bg-light navbar-light">
-    <ul class="navbar-nav">
-        <li class="nav-item active">
-            <a class="navbar-brand" href="#">Internal Proxy</a>
-        </li>
-        <a class="btn btn-info" href="#" th:href="@{/all}"> Back to All Services </a>
-    </ul>
+<body style="background-color:#ededed">
+
+<nav style="margin-bottom: 35px;" class="navbar navbar-expand-sm bg-light navbar-light">
+    <!--<ul class="navbar-nav nav-justified">-->
+    <!--<li class="nav-item active">-->
+    <h4 style="margin-bottom:-4px" class="navbar-brand">INTERNAL PROXY</h4>
+    <!--</li>-->
+    <a class="btn btn-info" href="#" th:href="@{/all}"> Back to All Services </a>
+    <!--</ul>-->
 </nav>
 <div class="page-header">
     <h1>|</h1>
@@ -33,12 +41,12 @@
                   method="post">
                 <fieldset style="display: inline-block;">
 					<span>
-                         <h1 style="display: inline-block; color:white"> Edit Entries </h1>
+                         <h1 style="display: inline-block;"> Edit Entries </h1>
 						    <input type="submit" id="submitButton" class="btn btn-success" th:value="Update"
                                    style="float: right;">
 					</span>
 
-                    <table class="table table-dark">
+                    <table class="table table-striped">
                         <thead>
                         <tr>
                             <th> isMocked</th>
