--- a/src/main/resources/templates/entries/allEntries.html
+++ b/src/main/resources/templates/entries/allEntries.html
@@ -18,7 +18,7 @@
 <style>
 
 </style>
-<nav style="margin-bottom: 35px;" class="navbar navbar-expand-sm bg-light navbar-light">
+<nav style="margin-bottom: 35px;" class="navbar navbar-expand-sm bg-dark navbar-dark">
     <!--<ul class="navbar-nav">-->
     <h4 style="margin-bottom:-4px" class="navbar-brand">INTERNAL PROXY</h4>
     <a class="btn btn-success" href="#" th:href="@{/create}"> Add Entries </a>
@@ -37,7 +37,6 @@
         <div class="col-md-6">
             <table class="table table-striped">
                 <thead>
-
                 <th> isMocked</th>
                 <th> ServiceName</th>
                 <th> Route</th>
@@ -61,7 +60,36 @@
 
                     <td><span th:text="${entry.key}"> ServiceName </span></td>
                     <td><span th:text="${entries[__${entry.key}__].realUrl}"> Route </span></td>
-                    <td><span th:text="${entries[__${entry.key}__].mock}"> MockResponse </span></td>
+                    <td>
+                        <button type="button" class="btn btn-primary" data-toggle="modal"
+                                data-target="#exampleModal">View</button>
+                    </td>
+
+                    <div class="modal right fade" id="exampleModal" tabindex="-1" role="dialog"
+                         aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-full-height modal-right" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel" th:text="${entries[__${entry.key}__].name}"></h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    <form>
+                                        <div class="form-group">
+                                            <label for="message-text" class="col-form-label">Mock Response:</label>
+                                            <span type="text" th:text="${entries[__${entry.key}__].mock}" class="form-control" id="message-text"></span>
+                                        </div>
+                                    </form>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-primary" data-dismiss="modal">
+                                        Close</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </tr>
                 </tbody>
             </table>
