--- a/src/main/resources/templates/entries/edit.html
+++ b/src/main/resources/templates/entries/edit.html
@@ -1,11 +1,10 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
-    <title>Edit Entries</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Mocked Services</title>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <title>Edit Entries</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
@@ -18,7 +17,7 @@
 </head>
 <body style="background-color:#ededed">
 
-<nav style="margin-bottom: 35px;" class="navbar navbar-expand-sm bg-light navbar-light">
+<nav style="margin-bottom: 35px;" class="navbar navbar-expand-sm bg-dark navbar-dark">
     <!--<ul class="navbar-nav nav-justified">-->
     <!--<li class="nav-item active">-->
     <h4 style="margin-bottom:-4px" class="navbar-brand">INTERNAL PROXY</h4>
@@ -26,9 +25,7 @@
     <a class="btn btn-info" href="#" th:href="@{/all}"> Back to All Services </a>
     <!--</ul>-->
 </nav>
-<div class="page-header">
-    <h1>|</h1>
-</div>
+
 <div class="container">
     <div class="row">
     </div>
@@ -69,7 +66,7 @@
                             </td>
                             <div class="modal right fade" id="exampleModal" tabindex="-1" role="dialog"
                                  aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                <div class="modal-dialog modal-full-height modal-lg modal-right" role="document">
+                                <div class="modal-dialog modal-full-height modal-right" role="document">
                                     <div class="modal-content">
                                         <div class="modal-header">
                                             <h5 class="modal-title" id="exampleModalLabel">Edit Response</h5>
