fix modals bug with th:each loops

--- a/src/main/resources/templates/entries/edit.html
+++ b/src/main/resources/templates/entries/edit.html
@@ -61,10 +61,10 @@
                             </td>
                             <td>
                                 <button type="button" class="btn btn-primary" data-toggle="modal"
-                                        data-target="#exampleModal">View/Edit
+                                        th:data-target="${'#exampleModal' + entry.key}">View/Edit
                                 </button>
                             </td>
-                            <div class="modal right fade" id="exampleModal" tabindex="-1" role="dialog"
+                            <div class="modal right fade" th:id="${'exampleModal' + entry.key}" tabindex="-1" role="dialog"
                                  aria-labelledby="exampleModalLabel" aria-hidden="true">
                                 <div class="modal-dialog modal-full-height modal-right" role="document">
                                     <div class="modal-content">
