--- a/src/main/resources/templates/entries/add.html
+++ b/src/main/resources/templates/entries/add.html
@@ -12,31 +12,27 @@
     <!-- Material Design Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.15/css/mdb.min.css" rel="stylesheet">
 
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.15/js/mdb.min.js"></script>
+    <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.15/js/mdb.min.js"></script>
 </head>
-<style>
 
-
-</style>
 <body style="background-color:#ededed">
 
 <nav style="margin-bottom: 35px;" class="navbar navbar-expand-sm bg-dark navbar-dark">
     <!--<ul class="navbar-nav nav-justified">-->
-            <!--<li class="nav-item active">-->
-            <h4 style="margin-bottom:-4px" class="navbar-brand">INTERNAL PROXY</h4>
-            <!--</li>-->
-            <a class="btn btn-info" href="#" th:href="@{/all}"> Back to All Services </a>
+    <!--<li class="nav-item active">-->
+    <h4 style="margin-bottom:-4px" class="navbar-brand">INTERNAL PROXY</h4>
+    <!--</li>-->
+    <a class="btn btn-info" href="#" th:href="@{/all}"> Back to All Services </a>
     <!--</ul>-->
 </nav>
 <div class="container">
+    <div class="row"></div>
     <div class="row">
-
-    </div>
-    <div class="row">
-        <div class="col-md-6">
-
+        <div class="col-lg-auto">
             <form action="#" class="form-horizontal"
                   th:action="@{/save}"
                   th:object="${form}"
@@ -61,9 +57,13 @@
                         </thead>
                         <tbody>
                         <tr th:object="${form}">
-                            <td><input type="checkbox" th:field="*{mocked}"/></td>
-                            <td><input th:placeholder="ServiceName " th:field="*{name}" required/></td>
-                            <td><input th:placeholder="RealUrl " th:field="*{realUrl}" required pattern="https?://.+"/>
+                            <td>
+                                <input type="checkbox" th:field="*{mocked}">
+                            </td>
+                            <td><input class="form-control form-control-lg" th:placeholder="ServiceName "
+                                       th:field="*{name}" required/></td>
+                            <td><input class="form-control form-control-lg" th:placeholder="RealUrl "
+                                       th:field="*{realUrl}" required pattern="https?://.+"/>
                             </td>
                             <!--<td><input th:placeholder="MockResponse " th:field="*{mock}" required/></td>-->
                             <td>
@@ -84,8 +84,10 @@
                                         <div class="modal-body">
                                             <form>
                                                 <div class="form-group">
-                                                    <label for="message-text" class="col-form-label">Please enter the text to be returned as the service response</label>
-                                                    <textarea type="text" th:field="*{mock}" class="form-control"
+                                                    <label for="message-text" class="col-form-label">Please enter the
+                                                        text to be returned as the service response</label>
+                                                    <textarea rows="40" type="text" th:field="*{mock}"
+                                                              class="form-control"
                                                               id="message-text"></textarea>
                                                 </div>
                                             </form>
