--- a/src/main/resources/templates/entries/edit.html
+++ b/src/main/resources/templates/entries/edit.html
@@ -11,9 +11,11 @@
     <!-- Material Design Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.15/css/mdb.min.css" rel="stylesheet">
 
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.15/js/mdb.min.js"></script>
+    <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.15/js/mdb.min.js"></script>
 </head>
 <body style="background-color:#ededed">
 
@@ -30,7 +32,7 @@
     <div class="row">
     </div>
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-xl-auto">
 
             <form action="#" class="form-horizontal"
                   th:action="@{/replace}"
@@ -50,21 +52,23 @@
                             <th> Service Name</th>
                             <th> Route</th>
                             <th> MockResponse</th>
+                            <th> X</th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr th:each="currentClient, stat : *{temp}">
                             <td>
                                 <input type="checkbox" th:field="*{temp[__${stat.index}__].mocked}"/></td>
-                            <td><input th:field="*{temp[__${stat.index}__].name}" required/></td>
-                            <td><input th:field="*{temp[__${stat.index}__].realUrl}" required pattern="https?://.+"/>
+                            <td><input class="form-control form-control-lg" th:field="*{temp[__${stat.index}__].name}" required/></td>
+                            <td><input class="form-control form-control-lg" th:field="*{temp[__${stat.index}__].realUrl}" required pattern="https?://.+"/>
                             </td>
                             <td>
                                 <button type="button" class="btn btn-primary" data-toggle="modal"
-                                        th:data-target="${'#exampleModal' + entry.key}">View/Edit
+                                        th:data-target="${'#exampleModal' + stat.index}">View/Edit
                                 </button>
                             </td>
-                            <div class="modal right fade" th:id="${'exampleModal' + entry.key}" tabindex="-1" role="dialog"
+                            <div class="modal right fade" th:id="${'exampleModal' + stat.index}" tabindex="-1"
+                                 role="dialog"
                                  aria-labelledby="exampleModalLabel" aria-hidden="true">
                                 <div class="modal-dialog modal-full-height modal-right" role="document">
                                     <div class="modal-content">
@@ -93,6 +97,12 @@
                                     </div>
                                 </div>
                             </div>
+                            <td>
+                                <button type="button" class="close" aria-label="Close">
+                                    <a th:href="*{'/delete/' + temp[__${stat.index}__].name}" class="close"
+                                       aria-label="Close"> <span aria-hidden="true">&times;</span></a>
+                                </button>
+                            </td>
                         </tr>
                         </tbody>
                     </table>
