--- a/src/main/resources/templates/entries/add.html
+++ b/src/main/resources/templates/entries/add.html
@@ -86,7 +86,7 @@
                                                 <div class="form-group">
                                                     <label for="message-text" class="col-form-label">Please enter the
                                                         text to be returned as the service response</label>
-                                                    <textarea rows="40" type="text" th:field="*{mock}"
+                                                    <textarea rows="40" th:field="*{mock}"
                                                               class="form-control"
                                                               id="message-text"></textarea>
                                                 </div>
