Move container to the left Fix Bug with editing n+1 entries

--- a/src/main/resources/templates/entries/allEntries.html
+++ b/src/main/resources/templates/entries/allEntries.html
@@ -18,7 +18,7 @@
 <style>
 
 </style>
-<nav style="margin-bottom: 35px;" class="navbar navbar-expand-sm bg-dark navbar-dark">
+<nav style="margin-bottom: 40px;" class="navbar navbar-expand-sm bg-dark navbar-dark">
     <!--<ul class="navbar-nav">-->
     <h4 style="margin-bottom:-4px" class="navbar-brand">INTERNAL PROXY</h4>
     <a class="btn btn-success" href="#" th:href="@{/create}"> Add Entries </a>
@@ -27,7 +27,7 @@
     <a class="btn btn-warning" href="#" th:href="@{/clear}"> Clear All </a>
     <!--</ul>-->
 </nav>
-<div class="container">
+<div class="container" style="margin-left: 40px">
     <div class="row">
         <div class="col-md-12">
             <h1> Mocked Services </h1>
@@ -90,6 +90,7 @@
                             </div>
                         </div>
                     </div>
+
                 </tr>
                 </tbody>
             </table>
