--- a/src/main/resources/templates/entries/add.html
+++ b/src/main/resources/templates/entries/add.html
@@ -29,7 +29,7 @@
     <a class="btn btn-info" href="#" th:href="@{/all}"> Back to All Services </a>
     <!--</ul>-->
 </nav>
-<div class="container">
+<div class="container" style="margin-left: 40px">
     <div class="row"></div>
     <div class="row">
         <div class="col-lg-auto">
