--- a/src/main/resources/templates/entries/edit.html
+++ b/src/main/resources/templates/entries/edit.html
@@ -28,7 +28,7 @@
     <!--</ul>-->
 </nav>
 
-<div class="container">
+<div class="container" style="margin-left: 40px">
     <div class="row">
     </div>
     <div class="row">
@@ -63,10 +63,10 @@
                             </td>
                             <td>
                                 <button type="button" class="btn btn-primary" data-toggle="modal"
-                                        th:data-target="${'#exampleModal' + stat.index}">View/Edit
+                                        th:data-target="${'#exampleModal' + entry.name}">View/Edit
                                 </button>
                             </td>
-                            <div class="modal right fade" th:id="${'exampleModal' + stat.index}" tabindex="-1"
+                            <div class="modal right fade" th:id="${'exampleModal' + entry.name}" tabindex="-1"
                                  role="dialog"
                                  aria-labelledby="exampleModalLabel" aria-hidden="true">
                                 <div class="modal-dialog modal-full-height modal-right" role="document">
@@ -78,14 +78,12 @@
                                             </button>
                                         </div>
                                         <div class="modal-body">
-                                            <form>
                                                 <div class="form-group">
                                                     <label for="message-text" class="col-form-label">Mock
                                                         Response:</label>
                                                     <textarea th:field="*{temp[__${stat.index}__].mock}"
                                                               class="form-control" id="message-text"></textarea>
                                                 </div>
-                                            </form>
                                         </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-primary" data-dismiss="modal">
